syntax = "proto2";

package com.scalableminds.webknossos.datastore;


message Vec3IntProto {
    required int32 x = 1;
    required int32 y = 2;
    required int32 z = 3;
}

message Vec3DoubleProto {
    required double x = 1;
    required double y = 2;
    required double z = 3;
}

message ColorProto {
  required double r = 1;
  required double g = 2;
  required double b = 3;
  required double a = 4;
}

message BoundingBoxProto {
    required Vec3IntProto topLeft = 1;
    required int32 width = 2;
    required int32 height = 3;
    required int32 depth = 4;
}

message NamedBoundingBoxProto {
  required int32 id = 1; // Zero shouldn't be used as an id because it's reserved for the original user bounding box
  optional string name = 2;
  optional bool isVisible = 3;
  optional ColorProto color = 4;
  required BoundingBoxProto boundingBox = 5;
}
